--- a/front-end/src/app/reports/reportheader/reportheader.component.html
+++ b/front-end/src/app/reports/reportheader/reportheader.component.html
@@ -2,7 +2,7 @@
  
   <div class="form__sidebar" *ngIf="showSideBar">
      <app-reportsidebar
-          title="Report Coverage Dates"
+          title="Filter Options"
           (status)='onNotify($event)'
           [specialreports]="specialreports"
      >
@@ -14,7 +14,17 @@
         <div class="card pl-3 pr-3">
                    <h1 class="pb-3 pt-3 border-bottom"><B>Reports</B>
                       <span class="float-right">
-
+                        </span>
+                      </h1>
+         </div>       
+          <div>      
+          <div class="grid-row">
+               <div class="grid-row__col grid-row__col--12">
+                 <div class="transactions__btn-container">                 
+                    <button [@fadeInOut] *ngIf="isTransactionViewActive()"  class="btn btn-primary" type="button" (click)="showPinColumns()">
+                    <i class="thumbtack-icon"></i>Pin Columns
+                    </button> &nbsp;&nbsp;&nbsp;
+        
                     <button  class="btn btn-primary" (click)="showFilter()">
                     <i class="fas fa-filter"></i> Filter
                     </button> &nbsp;&nbsp;&nbsp;
@@ -23,15 +33,35 @@
                     <i class="fas fa-recycle"></i> Recycle
                     </button>      
 
-                    </span>
-                    </h1>
+                    <div class="input-group pl-0 transactions__trx-search">
+                        <div class="input-group-append" (click)="clearSearch()" 
+                            ngbTooltip="Clear Keywords" tooltipClass="form-tooltip">
+                          <span class="input-group-text" id="">
+                            <i class="fas fa-eraser text-grey" aria-hidden="true"></i>
+                          </span>
+                        </div>                
+                        <input class="form-control py-1" type="text" placeholder="Search All" 
+                          [(ngModel)]="searchText" aria-label="Search">
+                        <div class="input-group-append" (click)="search()"
+                            ngbTooltip="Search All" tooltipClass="form-tooltip">
+                          <span class="input-group-text" id="">
+                            <i class="search-icon text-grey" aria-hidden="true"></i>
+                          </span>
+                        </div>
+                      </div>              
+                   </div> 
+                  </div>
+          </div>      
+          <div class="grid-row">
+                <div class="grid-row__col grid-row__col--12">
+                    <div class="transactions__btn-container"> 
                     <ngb-tabset  type="pills" width=400px>
-                       <ngb-tab >
+                       <ngb-tab class="btn btn-primary">
                          <!--<ngb-tab title="Current Year ({{currentYear}})">-->
                           <ng-template ngbTabTitle><b>Reporting Year ({{currentYear}})</b></ng-template> 
                           <ng-template ngbTabContent>
                               <app-reportdetails
-                              title="Report for Archives"
+                              title="Report for Current Year"
                               (status)='onNotify($event)'
                               [reports]="reports"
                               tableType="{{reportsView}}"
@@ -55,7 +85,10 @@
                         </ngb-tab>
                        
                     </ngb-tabset>
-              </div>  
+                   </div>
+                 </div>
+          </div>  
+        </div> 
       <div>         
   </div> <!-- ./form__container -->
 
