--- a/front-end/src/app/reports/reportheader/reportheader.component.scss
+++ b/front-end/src/app/reports/reportheader/reportheader.component.scss
@@ -77,6 +77,11 @@
       }
     }
     
+    .transactions__btn-container {
+      height: 100%;
+      padding: 1em;
+    }
+
     section {
       .form-content {
         .options-list {
@@ -105,6 +110,37 @@
 
   ::ng-deep a:hover {
     color:#0169a4;
+  }
+
+  .transactions__btn-container {
+    height: 100%;
+    padding: 1em;
+  }
+
+  .transactions__btn-search-filter {
+    margin: 0 3px;
+    background-color: $shuttleGray;
+    color: $white;
+  }
+
+  .transactions__btn-search-filter-join {
+    float: left;
+    padding: 10px 2px 0 2px;
+  }
+
+  .transactions__trx-btn {
+    margin: 5px;
+    width: 10em;
+  }
+
+  .transactions__trx-search {
+    width: 27%;
+    float: right;
+    margin-right: 5px;
+  }
+
+  .transactions__trx-applied-filter-row {
+    min-height: 48px;
   }
 
 
