Fixing issue with justify text

--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -219,7 +219,7 @@
                     type="button" 
                     class="btn btn-default editor-btn"
                     title="Justify"
-                    data-command="justifyLeft"
+                    data-command="justifyFull"
                     (click)="insertHTML($event)"                      
                   >
                     <i class="justify-icon" aria-hidden="true"></i>
