Email template change (#392)
* Patch notnull constraints (#351)

* CSS fix for transaction screen

* Making view transactions button work

* Code cleanup

* Fne 744 praveen sprint9 (#340)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* Fne 744 praveen sprint9 (#341)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* modifications to sched_a api on reports_id column

* functions to catch not null db error in backend

* coverage dates error handling

* modifying the cvg dates

* Fne 800 praveen sprint9 (#352)

* CSS fix for transaction screen

* Making view transactions button work

* Code cleanup

* Fne 744 praveen sprint9 (#340)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* Fne 744 praveen sprint9 (#341)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* modifications to sched_a api on reports_id column

* functions to catch not null db error in backend

* coverage dates error handling

* modifying the cvg dates

* templates/email_ack.html

* email acknowledgement template modification

* modifcations to email acknowledgement template

* modifcations to email acknowledgement template

--- a/django-backend/templates/email_ack.html
+++ b/django-backend/templates/email_ack.html
@@ -479,9 +479,9 @@ Your filing was received and accepted by our system on {{data.updated_at}}<br><b
 <tbody>
 <tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b>Filing ID:</b> </td><td>{{data.id}}</td></tr>
 <tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b>Committee ID:</b> </td><td>{{data.committeeid}}</td></tr>
-<tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b><b>Committee name:</b></td><td>{{data.committeename}}</td></tr>
-<tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b><b>Form type:</b></td><td>{{data.form_type}}  </td></tr>
-<tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b><b>Filing software/version:</b></td><td valign="bottom">8.3.0</td></tr>
+<tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b>Committee name:</b></td><td>{{data.committeename}}</td></tr>
+<tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b>Form type:</b></td><td>{{data.form_type}}  </td></tr>
+<tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b>Software/Version:</b></td><td valign="bottom">FECfile/8.3.0</td></tr>
 </tbody></table>
 
 </p>
