--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -1,6 +1,6 @@
 <div
   class="app-container"
-  [ngClass]="sideBarClass"
+  [ngClass]="{'active': showSideBar}"
 >
   <div class="app__top">
     <nav class="navbar py-0 navbar-expand-lg">
