Fne 942 mahendra sprint11 (#400)
* FNE_926 changes

FNE_926 changes

* FNE_926 changes

FNE_926 changes

* FNE_914 changes

FNE_914 changes

* FNE_914 changes

FNE_914 changes

* FNE_914 changes

FNE_914 changes

* FNE_942 changes

FNE_942 changes

* FNE_18 changes

FNE_18 changes

--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
@@ -14,9 +14,6 @@
         </th>
         <th [@fadeInOut] *ngIf="isColumnVisible('type')" [class]="getSortClass('type')" (click)="changeSortDirection('type')">Type
         </th>
-        <th [@fadeInOut] *ngIf="isColumnVisible('transactionId')" [class]="getSortClass('transactionId')"
-          (click)="changeSortDirection('transactionId')">Transaction ID
-        </th>
         <th [@fadeInOut] *ngIf="isColumnVisible('name')" [class]="getSortClass('name')" (click)="changeSortDirection('name')">Name
         </th>
         <th [@fadeInOut] *ngIf="isColumnVisible('street')" [class]="getSortClass('street')" (click)="changeSortDirection('street')">
@@ -31,9 +28,9 @@
         </th>
         <th [@fadeInOut] *ngIf="isColumnVisible('date')" [class]="getSortClass('date')" (click)="changeSortDirection('date')">Date
         </th>
-        <th [@fadeInOut] *ngIf="isColumnVisible('aggregate')" [class]="getSortClass('aggregate')"
+       <!--<th [@fadeInOut] *ngIf="isColumnVisible('aggregate')" [class]="getSortClass('aggregate')"
           (click)="changeSortDirection('aggregate')">Aggregate
-        </th>
+        </th>-->
         <th [@fadeInOut] *ngIf="isColumnVisible('purposeDescription')" [class]="getSortClass('purposeDescription')"
           (click)="changeSortDirection('purposeDescription')">Purpose Description
         </th>
@@ -55,6 +52,9 @@
         <th [@fadeInOut] *ngIf="isColumnVisible('amount')" [class]="getSortClass('amount')" (click)="changeSortDirection('amount')">
           Amount
         </th>        
+        <th [@fadeInOut] *ngIf="isColumnVisible('aggregate')" [class]="getSortClass('aggregate')"
+          (click)="changeSortDirection('aggregate')">Aggregate Amount
+        </th>
         <th class="bulk_action">
           <div [@fadeInOut] *ngIf="isTransactionViewActive()" class="btn-group" ngbDropdown role="group"
             aria-label="Action dropdown">
@@ -96,14 +96,14 @@
           <input [(ngModel)]="trx.selected" type="checkbox" (click)="checkForMultiChecked($event)">
         </td>
         <td [@fadeInOut] *ngIf="isColumnVisible('type')">{{trx.type}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('transactionId')">{{trx.transactionId}}</td>
+        <!--<td [@fadeInOut] *ngIf="isColumnVisible('transactionId')">{{trx.transactionId}}</td>-->
         <td [@fadeInOut] *ngIf="isColumnVisible('name')">{{trx.name}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('street')">{{trx.street}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('city')">{{trx.city}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('state')">{{trx.state}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('zip')">{{trx.zip | zipCode}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('date')">{{trx.date | date: 'MM/dd/yyyy'}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('aggregate')">{{trx.aggregate}}</td>
+        <!--<td [@fadeInOut] *ngIf="isColumnVisible('aggregate')">{{trx.aggregate}}</td>-->
         <td [@fadeInOut] *ngIf="isColumnVisible('purposeDescription')">{{trx.purposeDescription}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('contributorEmployer')">{{trx.contributorEmployer}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('contributorOccupation')">{{trx.contributorOccupation}}</td>
@@ -111,6 +111,7 @@
         <td [@fadeInOut] *ngIf="isColumnVisible('memoText')">{{trx.memoText}}</td>
         <td [@fadeInOut] *ngIf="isRecycleBinViewActive()">{{trx.deletedDate | date: 'MM/dd/yyyy'}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('amount')">{{trx.amount | currency:'USD':'symbol-narrow':'1.0-0'}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('aggregate')">{{trx.aggregate | currency:'USD':'symbol-narrow':'1.0-0'}}</td>
         <td>
           <div [@fadeInOut] *ngIf="isRecycleBinViewActive()">
             <button class="btn btn-sm btn-primary" (click)="restoreTransaction(trx)">
@@ -215,11 +216,11 @@
               <div class="col-md">
                 <div class="checkbox">
                   <label>
-                    <input [(ngModel)]="getSortableColumn('transactionId').checked"
-                      (change)="toggleVisibility('transactionId', $event)" type="checkbox"
-                      [disabled]="getSortableColumn('transactionId').disabled">
-                    <span [ngClass]="{'disabled-column-option':getSortableColumn('transactionId').disabled}">
-                      Transaction ID
+                    <input [(ngModel)]="getSortableColumn('aggregate').checked"
+                      (change)="toggleVisibility('aggregate', $event)" type="checkbox"
+                      [disabled]="getSortableColumn('aggregate').disabled">
+                    <span [ngClass]="{'disabled-column-option':getSortableColumn('aggregate').disabled}">
+                      Aggregate Amount
                     </span>
                   </label>
                 </div>
